--- a/dev-ruby/needle/ChangeLog
+++ b/dev-ruby/needle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/needle
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/needle/ChangeLog,v 1.26 2011/12/29 21:44:59 halcy0n Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/needle/ChangeLog,v 1.27 2011/12/30 08:12:38 graaff Exp $
+
+  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> -needle-1.3.0.ebuild:
+  Remove old version.
 
   29 Dec 2011; Mark Loeser <halcy0n@gentoo.org> needle-1.3.0.ebuild:
   Drop stable keywords for ppc/ppc64; bug #380039
