--- a/app-admin/eselect-rails/ChangeLog
+++ b/app-admin/eselect-rails/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.44 2011/12/30 09:19:23 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.45 2011/12/30 09:21:52 graaff Exp $
+
+*eselect-rails-0.18 (30 Dec 2011)
+
+  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> +eselect-rails-0.18.ebuild:
+  Version bump.
 
   30 Dec 2011; Hans de Graaff <graaff@gentoo.org> -eselect-rails-0.15.ebuild:
   Remove old version.
