--- a/media-libs/libv4l/ChangeLog
+++ b/media-libs/libv4l/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libv4l
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.59 2011/12/30 13:14:33 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.60 2011/12/30 13:15:22 ssuominen Exp $
+
+  30 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -libv4l-0.8.1.ebuild,
+  -libv4l-0.8.3.ebuild, -libv4l-0.8.4.ebuild:
+  old
 
   30 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> libv4l-0.8.5.ebuild:
   ppc/ppc64 stable wrt #382727
