--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.809 2011/12/22 01:09:58 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.810 2011/12/30 15:06:47 halcy0n Exp $
+
+  29 Dec 2011; Mark Loeser <halcy0n@gentoo.org> glibc-2.13-r4.ebuild:
+  Stable for ppc/ppc64; bug #382377
 
   22 Dec 2011; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit,
   files/eblits/src_install.eblit:
