--- a/net-misc/tor/ChangeLog
+++ b/net-misc/tor/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/tor
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tor/ChangeLog,v 1.311 2011/12/27 00:31:12 halcy0n Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tor/ChangeLog,v 1.312 2011/12/30 15:29:06 blueness Exp $
+
+*tor-0.2.3.10_alpha-r1 (30 Dec 2011)
+
+  30 Dec 2011; Anthony G. Basile <blueness@gentoo.org>
+  +tor-0.2.3.10_alpha-r1.ebuild:
+  Relax version for dependency on net-libs/miniupnpc
 
   27 Dec 2011; Mark Loeser <halcy0n@gentoo.org> tor-0.2.2.35.ebuild:
   Stable for ppc/ppc64; bug #394969
