--- a/app-admin/python-updater/ChangeLog
+++ b/app-admin/python-updater/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/python-updater
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.67 2011/12/30 17:29:55 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.68 2011/12/30 17:41:45 maksbotan Exp $
+
+  30 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> python-updater-9999.ebuild:
+  Synchronize live ebuild with other ebuilds. Patch by Arfrever.
 
 *python-updater-0.10 (30 Dec 2011)
 
