--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/base/ChangeLog,v 1.328 2011/12/06 22:00:09 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/base/ChangeLog,v 1.329 2011/12/31 11:38:28 aballier Exp $
+
+  31 Dec 2011; Alexis Ballier <aballier@gentoo.org> package.use.mask:
+  remove usemask for vlc useflag thats now gone
 
   06 Dec 2011; Mike Frysinger <vapier@gentoo.org> package.use.mask:
   Mask gcc[libssp] as no one should generally be using it.
