--- a/app-backup/duplicity/ChangeLog
+++ b/app-backup/duplicity/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/duplicity
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/duplicity/ChangeLog,v 1.60 2011/11/28 09:47:35 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/duplicity/ChangeLog,v 1.61 2011/12/31 12:41:23 ago Exp $
+
+  31 Dec 2011; Agostino Sarubbo <ago@gentoo.org> duplicity-0.6.17.ebuild:
+  Stable for AMD64, wrt bug #396517
 
 *duplicity-0.6.17 (28 Nov 2011)
 
