--- a/dev-java/commons-beanutils/ChangeLog
+++ b/dev-java/commons-beanutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/commons-beanutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-beanutils/ChangeLog,v 1.55 2011/12/19 12:55:22 sera Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-beanutils/ChangeLog,v 1.56 2011/12/31 12:26:50 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
+  commons-beanutils-1.6.1-r3.ebuild, commons-beanutils-1.8.0.ebuild,
+  commons-beanutils-1.8.3.ebuild:
+  Drop ia64 support #345433
 
   19 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
   commons-beanutils-1.6.1-r3.ebuild:
