--- a/dev-java/jsch/ChangeLog
+++ b/dev-java/jsch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jsch
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsch/ChangeLog,v 1.82 2011/05/03 18:44:33 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsch/ChangeLog,v 1.83 2011/12/31 12:42:00 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> jsch-0.1.41.ebuild,
+  jsch-0.1.44.ebuild:
+  Drop ia64 support #345433
 
   03 May 2011; Fabian Groffen <grobian@gentoo.org> jsch-0.1.44.ebuild:
   Marked ~x64-freebsd
