--- a/dev-java/eclipse-ecj/ChangeLog
+++ b/dev-java/eclipse-ecj/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/eclipse-ecj
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.77 2011/12/14 18:34:09 sera Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.78 2011/12/31 14:25:23 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> eclipse-ecj-3.3.0-r3.ebuild,
+  eclipse-ecj-3.4-r4.ebuild:
+  Drop ia64 support #345433
 
   14 Dec 2011; Ralph Sennhauser <sera@gentoo.org> +eclipse-ecj-3.3.0-r3.ebuild:
   Restore for now, forcing jdk < 1.7
