--- a/app-admin/eselect-ecj/ChangeLog
+++ b/app-admin/eselect-ecj/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-ecj
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-ecj/ChangeLog,v 1.15 2011/12/31 11:04:15 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-ecj/ChangeLog,v 1.16 2011/12/31 14:30:00 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> eselect-ecj-0.6.ebuild,
+  eselect-ecj-0.6-r1.ebuild:
+  Drop ia64 support #345433
 
   31 Dec 2011; Agostino Sarubbo <ago@gentoo.org> eselect-ecj-0.7.ebuild:
   Stable for AMD64, wrt bug #396513
