--- a/virtual/ruby-ssl/ChangeLog
+++ b/virtual/ruby-ssl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/ruby-ssl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ruby-ssl/ChangeLog,v 1.7 2011/12/31 14:51:25 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ruby-ssl/ChangeLog,v 1.8 2011/12/31 14:52:34 graaff Exp $
+
+  31 Dec 2011; Hans de Graaff <graaff@gentoo.org> ruby-ssl-1.ebuild:
+  Add hppa keyword since underlying implementation is now also keyworded.
 
   31 Dec 2011; Hans de Graaff <graaff@gentoo.org> ruby-ssl-1.ebuild:
   Add alpha keyword since underlying implementation is now also keyworded.
