--- a/dev-ruby/syntax/ChangeLog
+++ b/dev-ruby/syntax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/syntax
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/syntax/ChangeLog,v 1.34 2011/12/06 13:26:58 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/syntax/ChangeLog,v 1.35 2011/12/31 17:48:28 grobian Exp $
+
+  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> syntax-1.0.0-r3.ebuild:
+  Add Prefix keywords, bug #396547
 
   06 Dec 2011; Hans de Graaff <graaff@gentoo.org> -syntax-1.0.0.ebuild:
   Remove old version.
