--- a/dev-ruby/gherkin/ChangeLog
+++ b/dev-ruby/gherkin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/gherkin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gherkin/ChangeLog,v 1.34 2011/12/18 12:17:32 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gherkin/ChangeLog,v 1.35 2011/12/31 18:11:41 grobian Exp $
+
+  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> gherkin-1.0.30-r1.ebuild:
+  Add Prefix keywords, bug #396547
 
 *gherkin-2.7.1 (18 Dec 2011)
 
