--- a/dev-ruby/abstract/ChangeLog
+++ b/dev-ruby/abstract/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/abstract
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/abstract/ChangeLog,v 1.8 2011/12/31 17:44:32 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/abstract/ChangeLog,v 1.9 2011/12/31 21:03:10 grobian Exp $
+
+  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> abstract-1.0.0-r1.ebuild:
+  Add Prefix keywords, bug #396547
 
   31 Dec 2011; Fabian Groffen <grobian@gentoo.org> abstract-1.0.0-r1.ebuild:
   Add Prefix keywords, bug #396547
