--- a/dev-ruby/rack-cache/ChangeLog
+++ b/dev-ruby/rack-cache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rack-cache
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rack-cache/ChangeLog,v 1.5 2011/12/24 10:38:36 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rack-cache/ChangeLog,v 1.6 2011/12/31 21:09:57 grobian Exp $
+
+  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> rack-cache-1.1.ebuild:
+  Add Prefix keywords, bug #396547
 
 *rack-cache-1.1 (24 Dec 2011)
 
