--- a/dev-libs/yajl/ChangeLog
+++ b/dev-libs/yajl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/yajl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/yajl/ChangeLog,v 1.17 2011/12/25 13:30:35 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/yajl/ChangeLog,v 1.18 2011/12/31 21:18:09 grobian Exp $
+
+  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> yajl-2.0.3.ebuild:
+  Add Prefix keywords, bug #396547
 
 *yajl-2.0.3 (25 Dec 2011)
 
