--- a/media-gfx/gimp/ChangeLog
+++ b/media-gfx/gimp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.349 2012/01/01 14:04:38 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.350 2012/01/01 15:36:55 sping Exp $
+
+*gimp-2.7.4 (01 Jan 2012)
+
+  01 Jan 2012; Sebastian Pipping <sping@gentoo.org> +gimp-2.7.4.ebuild:
+  Bump to 2.7.4 (bug #395695)
 
   01 Jan 2012; Sebastian Pipping <sping@gentoo.org> gimp-2.7.3-r1.ebuild,
   gimp-9999.ebuild:
