--- a/media-libs/gegl/ChangeLog
+++ b/media-libs/gegl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gegl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gegl/ChangeLog,v 1.60 2012/01/01 20:53:51 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gegl/ChangeLog,v 1.61 2012/01/01 21:54:45 sping Exp $
+
+  01 Jan 2012; Sebastian Pipping <sping@gentoo.org> gegl-0.1.8.ebuild:
+  Hopefully fix sandbox violation (bug #396687)
 
   01 Jan 2012; Sebastian Pipping <sping@gentoo.org> gegl-0.1.8.ebuild:
   Fix broken use of --(en|dis)able-introspection
