--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.67 2012/01/01 19:01:11 pesa Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.68 2012/01/03 08:54:07 jlec Exp $
+
+  03 Jan 2012; Justin Lecher <jlec@gentoo.org> ChangeLog:
+  Convert make_desktop_entry() comment block to be eclass-manpages conform,
+  #397451
 
   01 Jan 2012; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
   Pass -importdir to configure only for qt >= 4.7 (bug #396685).
