--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,8 +1,8 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.68 2012/01/03 08:54:07 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.69 2012/01/03 08:59:01 jlec Exp $
 
-  03 Jan 2012; Justin Lecher <jlec@gentoo.org> ChangeLog:
+  03 Jan 2012; Justin Lecher <jlec@gentoo.org> eutils.eclass:
   Convert make_desktop_entry() comment block to be eclass-manpages conform,
   #397451
 
