--- a/dev-util/dwdiff/ChangeLog
+++ b/dev-util/dwdiff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/dwdiff
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/dwdiff/ChangeLog,v 1.4 2012/01/03 09:49:23 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/dwdiff/ChangeLog,v 1.5 2012/01/03 09:50:19 ssuominen Exp $
+
+  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -dwdiff-1.9.ebuild:
+  old
 
 *dwdiff-2.0.2 (03 Jan 2012)
 
