--- a/media-libs/gmtk/ChangeLog
+++ b/media-libs/gmtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gmtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gmtk/ChangeLog,v 1.2 2012/01/03 15:45:55 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gmtk/ChangeLog,v 1.3 2012/01/03 15:54:30 ssuominen Exp $
+
+  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -gmtk-1.0.5_beta1.ebuild:
+  old
 
 *gmtk-1.0.5 (03 Jan 2012)
 
