--- a/www-plugins/gecko-mediaplayer/ChangeLog
+++ b/www-plugins/gecko-mediaplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/gecko-mediaplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.63 2012/01/03 16:00:54 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.64 2012/01/03 16:01:39 ssuominen Exp $
+
+  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -gecko-mediaplayer-1.0.5_beta1_p20111207.ebuild:
+  old
 
 *gecko-mediaplayer-1.0.5 (03 Jan 2012)
 
