--- a/media-libs/gegl/ChangeLog
+++ b/media-libs/gegl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gegl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gegl/ChangeLog,v 1.63 2012/01/02 17:05:25 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gegl/ChangeLog,v 1.64 2012/01/04 06:12:57 sping Exp $
+
+  04 Jan 2012; Sebastian Pipping <sping@gentoo.org> gegl-0.1.8.ebuild:
+  Remove dependency on GTK+ from GEGL 0.1.8
 
   02 Jan 2012; Sebastian Pipping <sping@gentoo.org> gegl-0.1.8.ebuild:
   Improve fix on gegl/gegl-0.1.deps (for USE=introspection)
