--- a/dev-libs/libical/ChangeLog
+++ b/dev-libs/libical/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libical
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libical/ChangeLog,v 1.57 2012/01/04 14:53:02 s4t4n Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libical/ChangeLog,v 1.58 2012/01/04 14:53:52 s4t4n Exp $
+
+  04 Jan 2012;  <s4t4n@gentoo.org> Manifest:
+  Version bump. Closes bug #347883.
 
 *libical-0.48 (04 Jan 2012)
 
