--- a/media-sound/mp3splt-gtk/ChangeLog
+++ b/media-sound/mp3splt-gtk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mp3splt-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3splt-gtk/ChangeLog,v 1.23 2012/01/04 10:45:44 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3splt-gtk/ChangeLog,v 1.24 2012/01/04 17:39:56 mr_bones_ Exp $
+
+  04 Jan 2012; Michael Sterrett <mr_bones_@gentoo.org>
+  mp3splt-gtk-0.7.1.ebuild:
+  fix SRC_URI
 
 *mp3splt-gtk-0.7.1 (04 Jan 2012)
 
