--- a/net-libs/libnetfilter_log/ChangeLog
+++ b/net-libs/libnetfilter_log/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnetfilter_log
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libnetfilter_log/ChangeLog,v 1.12 2012/01/05 07:01:12 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libnetfilter_log/ChangeLog,v 1.13 2012/01/05 07:11:18 radhermit Exp $
+
+  05 Jan 2012; Tim Harder <radhermit@gentoo.org> libnetfilter_log-1.0.1.ebuild:
+  Add static-libs use flag.
 
   05 Jan 2012; Tim Harder <radhermit@gentoo.org>
   libnetfilter_log-0.0.15.ebuild, libnetfilter_log-0.0.16.ebuild,
