--- a/dev-ruby/childprocess/ChangeLog
+++ b/dev-ruby/childprocess/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/childprocess
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/childprocess/ChangeLog,v 1.11 2012/01/05 09:38:03 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/childprocess/ChangeLog,v 1.12 2012/01/05 09:40:03 graaff Exp $
+
+  05 Jan 2012; Hans de Graaff <graaff@gentoo.org> -childprocess-0.2.1.ebuild,
+  -childprocess-0.2.2.ebuild:
+  Remove old versions.
 
 *childprocess-0.2.5 (05 Jan 2012)
 
