--- a/dev-util/cpptest/ChangeLog
+++ b/dev-util/cpptest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cpptest
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cpptest/ChangeLog,v 1.12 2012/01/04 03:18:40 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cpptest/ChangeLog,v 1.13 2012/01/05 11:44:53 xmw Exp $
+
+  05 Jan 2012; Michael Weber <xmw@gentoo.org> cpptest-1.1.1.ebuild:
+  ppc/ppc64/sparc stable (bug 397017)
 
   04 Jan 2012; Sebastian Pipping <sping@gentoo.org> cpptest-1.1.1.ebuild:
   Remove .la files (bug #397017, comment 2)
