--- a/app-emulation/libguestfs/ChangeLog
+++ b/app-emulation/libguestfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/libguestfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libguestfs/ChangeLog,v 1.2 2012/01/05 11:23:23 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libguestfs/ChangeLog,v 1.3 2012/01/05 12:52:43 maksbotan Exp $
+
+  05 Jan 2012; Maxim Koltsov <maksbotan@gentoo.org> -libguestfs-1.8.15.ebuild:
+  Remove old 1.8.15
 
 *libguestfs-1.8.16 (05 Jan 2012)
 
