--- a/www-client/dillo/ChangeLog
+++ b/www-client/dillo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/dillo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/dillo/ChangeLog,v 1.100 2011/12/12 00:31:59 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/dillo/ChangeLog,v 1.101 2012/01/05 18:07:21 ssuominen Exp $
+
+  05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> dillo-3.0.1.ebuild:
+  amd64/x86 stable wrt #395917
 
 *dillo-3.0.2 (12 Dec 2011)
 
