--- a/media-sound/ncmpcpp/ChangeLog
+++ b/media-sound/ncmpcpp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/ncmpcpp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/ncmpcpp/ChangeLog,v 1.59 2012/01/05 11:59:01 xmw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/ncmpcpp/ChangeLog,v 1.60 2012/01/05 18:22:51 jer Exp $
+
+  05 Jan 2012; Jeroen Roovers <jer@gentoo.org> -ncmpcpp-0.5.6.ebuild,
+  -ncmpcpp-0.5.7.ebuild:
+  Old.
 
   05 Jan 2012; Michael Weber <xmw@gentoo.org> ncmpcpp-0.5.8.ebuild:
   ppc stable (bug 392245), added sparc stable.
