--- a/xfce-base/exo/ChangeLog
+++ b/xfce-base/exo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/exo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/exo/ChangeLog,v 1.66 2012/01/06 10:21:16 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/exo/ChangeLog,v 1.67 2012/01/06 10:21:59 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -exo-0.6.0.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> exo-0.6.2.ebuild:
   ppc/ppc64 stable wrt #386963
