--- a/xfce-base/libxfce4util/ChangeLog
+++ b/xfce-base/libxfce4util/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfce4util
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.167 2012/01/06 10:25:49 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.168 2012/01/06 10:26:38 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -libxfce4util-4.8.1.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   libxfce4util-4.8.2.ebuild:
