--- a/xfce-base/xfce4-session/ChangeLog
+++ b/xfce-base/xfce4-session/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.148 2012/01/06 10:39:52 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.149 2012/01/06 10:40:36 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -xfce4-session-4.8.1.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-session-4.8.2.ebuild:
