--- a/xfce-base/xfce4-settings/ChangeLog
+++ b/xfce-base/xfce4-settings/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-settings
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.87 2012/01/06 10:43:33 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.88 2012/01/06 10:44:23 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -xfce4-settings-4.8.1.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-settings-4.8.3.ebuild:
