--- a/xfce-base/xfwm4/ChangeLog
+++ b/xfce-base/xfwm4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfwm4
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.180 2012/01/06 10:50:26 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.181 2012/01/06 10:51:10 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -xfwm4-4.8.1.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> xfwm4-4.8.2.ebuild:
   ppc/ppc64 stable wrt #386963
