--- a/media-gfx/ristretto/ChangeLog
+++ b/media-gfx/ristretto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/ristretto
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/ristretto/ChangeLog,v 1.49 2012/01/06 10:53:18 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/ristretto/ChangeLog,v 1.50 2012/01/06 10:53:57 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -ristretto-0.0.93.ebuild:
+  old
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> ristretto-0.1.0.ebuild:
   ppc/ppc64 stable wrt #386963
