--- a/xfce-extra/xfce4-sensors-plugin/ChangeLog
+++ b/xfce-extra/xfce4-sensors-plugin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-sensors-plugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-sensors-plugin/ChangeLog,v 1.30 2012/01/06 11:06:15 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-sensors-plugin/ChangeLog,v 1.31 2012/01/06 11:08:15 ssuominen Exp $
+
+  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-sensors-plugin-1.2.3.ebuild, metadata.xml:
+  Rename USE="nvidia" to VIDEO_CARDS="nvidia"
 
   06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   -xfce4-sensors-plugin-1.0.0-r1.ebuild,
