--- a/media-video/ffmpeg/ChangeLog
+++ b/media-video/ffmpeg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.519 2012/01/05 14:09:56 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.520 2012/01/06 12:06:50 aballier Exp $
+
+  06 Jan 2012; Alexis Ballier <aballier@gentoo.org> -ffmpeg-0.9.ebuild:
+  remove old
 
 *ffmpeg-0.9.1 (05 Jan 2012)
 
